fix color of book-links hyperlinks in dark mode

--- a/web/_includes/style.css
+++ b/web/_includes/style.css
@@ -2431,6 +2431,14 @@ div.featured-book-info h1,
   margin: 1.2rem 0 0;
   padding: 0 0 0 1.2rem;
   color: var(--general-night-4);
+  
+}
+
+@media (prefers-color-scheme: dark) {
+.book-links {
+  color: var(--general-night-2);
+}
+
 }
 
 .book-links li {
